unpackaged/main/default/objects/EventTracking__c/EventTracking__c.object-meta.xml
<CustomObject>
    <label>Event Tracking</label>
    <nameField>
        <displayFormat>E{0000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>