unpackaged/main/default/objects/EventTracking__c/fields/Date_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_Event__c</fullName>
    <label>Date Event</label>
    <required>true</required>
    <type>Date</type>
</CustomField>