unpackaged/main/default/objects/EventTracking__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>