unpackaged/main/default/objects/EventTracking__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the event has been communicated to the customer.</description>
    <label>Notified</label>
    <type>Checkbox</type>
</CustomField>