unpackaged/main/default/objects/EventTracking__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Event Trackings</relationshipLabel>
    <relationshipName>Event_Trackings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>