unpackaged/main/default/objects/EventTracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nature__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced/Canceled</fullName>
            </value>
            <value>
                <fullName>Activate</fullName>
                <isActive>false</isActive>
                <label>Activate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>