unpackaged/main/default/objects/EventTracking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newbiz</fullName>
            </value>
            <value>
                <fullName>Cancellation request</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>