unpackaged/main/default/objects/EventTracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Nature__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Event__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>